src/libqaccessible.bf

public struct QAccessibleTextRemoveEvent
{
	[LinkName("QAccessibleTextRemoveEvent_new")]
	public static extern void* QAccessibleTextRemoveEvent_new(QObject obj, int32 position, char8[] text);
	[LinkName("QAccessibleTextRemoveEvent_new2")]
	public static extern void* QAccessibleTextRemoveEvent_new2(QAccessibleInterface iface, int32 position, char8[] text);
	[LinkName("QAccessibleTextRemoveEvent_TextRemoved")]
	public static extern char8[] QAccessibleTextRemoveEvent_TextRemoved(void* c_this);
	[LinkName("QAccessibleTextRemoveEvent_ChangePosition")]
	public static extern int32 QAccessibleTextRemoveEvent_ChangePosition(void* c_this);
}
public struct QAccessibleTextUpdateEvent
{
	[LinkName("QAccessibleTextUpdateEvent_new")]
	public static extern void* QAccessibleTextUpdateEvent_new(QObject obj, int32 position, char8[] oldText, char8[] text);
	[LinkName("QAccessibleTextUpdateEvent_new2")]
	public static extern void* QAccessibleTextUpdateEvent_new2(QAccessibleInterface iface, int32 position, char8[] oldText, char8[] text);
	[LinkName("QAccessibleTextUpdateEvent_TextRemoved")]
	public static extern char8[] QAccessibleTextUpdateEvent_TextRemoved(void* c_this);
	[LinkName("QAccessibleTextUpdateEvent_TextInserted")]
	public static extern char8[] QAccessibleTextUpdateEvent_TextInserted(void* c_this);
	[LinkName("QAccessibleTextUpdateEvent_ChangePosition")]
	public static extern int32 QAccessibleTextUpdateEvent_ChangePosition(void* c_this);
}
public struct QAccessibleValueChangeEvent
{
	[LinkName("QAccessibleValueChangeEvent_new")]
	public static extern void* QAccessibleValueChangeEvent_new(QObject obj, QVariant val);
	[LinkName("QAccessibleValueChangeEvent_new2")]
	public static extern void* QAccessibleValueChangeEvent_new2(QAccessibleInterface iface, QVariant val);
	[LinkName("QAccessibleValueChangeEvent_SetValue")]
	public static extern void QAccessibleValueChangeEvent_SetValue(void* c_this, QVariant val);
	[LinkName("QAccessibleValueChangeEvent_Value")]
	public static extern QVariant QAccessibleValueChangeEvent_Value(void* c_this);
}
public struct QAccessibleTableModelChangeEvent
{
	[LinkName("QAccessibleTableModelChangeEvent_new")]
	public static extern void* QAccessibleTableModelChangeEvent_new(QObject obj, int64 changeType);
	[LinkName("QAccessibleTableModelChangeEvent_new2")]
	public static extern void* QAccessibleTableModelChangeEvent_new2(QAccessibleInterface iface, int64 changeType);
	[LinkName("QAccessibleTableModelChangeEvent_SetModelChangeType")]
	public static extern void QAccessibleTableModelChangeEvent_SetModelChangeType(void* c_this, int64 changeType);
	[LinkName("QAccessibleTableModelChangeEvent_ModelChangeType")]
	public static extern int64 QAccessibleTableModelChangeEvent_ModelChangeType(void* c_this);
	[LinkName("QAccessibleTableModelChangeEvent_SetFirstRow")]
	public static extern void QAccessibleTableModelChangeEvent_SetFirstRow(void* c_this, int32 row);
	[LinkName("QAccessibleTableModelChangeEvent_SetFirstColumn")]
	public static extern void QAccessibleTableModelChangeEvent_SetFirstColumn(void* c_this, int32 col);
	[LinkName("QAccessibleTableModelChangeEvent_SetLastRow")]
	public static extern void QAccessibleTableModelChangeEvent_SetLastRow(void* c_this, int32 row);
	[LinkName("QAccessibleTableModelChangeEvent_SetLastColumn")]
	public static extern void QAccessibleTableModelChangeEvent_SetLastColumn(void* c_this, int32 col);
	[LinkName("QAccessibleTableModelChangeEvent_FirstRow")]
	public static extern int32 QAccessibleTableModelChangeEvent_FirstRow(void* c_this);
	[LinkName("QAccessibleTableModelChangeEvent_FirstColumn")]
	public static extern int32 QAccessibleTableModelChangeEvent_FirstColumn(void* c_this);
	[LinkName("QAccessibleTableModelChangeEvent_LastRow")]
	public static extern int32 QAccessibleTableModelChangeEvent_LastRow(void* c_this);
	[LinkName("QAccessibleTableModelChangeEvent_LastColumn")]
	public static extern int32 QAccessibleTableModelChangeEvent_LastColumn(void* c_this);
}